--- a/dept/ece.html
+++ b/dept/ece.html
@@ -58,12 +58,12 @@
                             <a href="#">Department</a>
                             <i class="fa-solid fa-chevron-down down"></i>
                             <ul class="sub-menu">
-                                <li><a href="#"><span>Computer Science & Engineering</span></a></li>
+                                <li><a href="cs.html"><span>Computer Science & Engineering</span></a></li>
                                 <li><a href="is.html"><span>Information Science & Engineering</span></a></li>
                                 <li><a href="csd.html"><span>Computer Science & Design</span></a></li>
                                 <li><a href="csbs.html"><span>Computer Science & Business System</span></a></li>
                                 <li><a href="aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
-                                <li><a href="ece.html"><span>Electronics & Communication Engineering</span></a></li>
+                                <li><a href="#"><span>Electronics & Communication Engineering</span></a></li>
                                 <li><a href="mech.html"><span>Mechanical Engineering</span></a></li>
                             </ul>
                         </li>
@@ -228,19 +228,19 @@
                                                 <div class="nav-container">
                                                     <div class="nav box1">
                                                         <div class="nav-overlay"></div>
-                                                        <a href="./cs/facilities.html">Facilities</a>
+                                                        <a href="./ece/facilities.html">Facilities</a>
                                                     </div>
                                                     <div class="nav box2">
                                                         <div class="nav-overlay"></div>
-                                                        <a href="./cs/faculties.html">Faculty</a>
+                                                        <a href="./ece/faculties.html">Faculty</a>
                                                     </div>
                                                     <div class="nav box3">
                                                         <div class="nav-overlay"></div>
-                                                        <a href="./cs/hod.html">HOD</a>
+                                                        <a href="./ece/hod.html">HOD</a>
                                                     </div>
                                                     <div class="nav box4">
                                                         <div class="nav-overlay"></div>
-                                                        <a href="./cs/structure.html">Structure</a>
+                                                        <a href="./ece/structure.html">Structure</a>
                                                     </div>
                                                 </div>
                                             </section>
