--- a/dept/is/facilities.html
+++ b/dept/is/facilities.html
@@ -58,13 +58,13 @@
                             <a href="#">Department</a>
                             <i class="fa-solid fa-chevron-down down"></i>
                             <ul class="sub-menu">
-                                <li><a href="#"><span>Computer Science & Engineering</span></a></li>
-                                <li><a href="is.html"><span>Information Science & Engineering</span></a></li>
-                                <li><a href="csd.html"><span>Computer Science & Design</span></a></li>
-                                <li><a href="csbs.html"><span>Computer Science & Business System</span></a></li>
-                                <li><a href="aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
-                                <li><a href="ece.html"><span>Electronics & Communication Engineering</span></a></li>
-                                <li><a href="mech.html"><span>Mechanical Engineering</span></a></li>
+                                <li><a href="../cs.html"><span>Computer Science & Engineering</span></a></li>
+                                <li><a href="../is.html"><span>Information Science & Engineering</span></a></li>
+                                <li><a href="../csd.html"><span>Computer Science & Design</span></a></li>
+                                <li><a href="../csbs.html"><span>Computer Science & Business System</span></a></li>
+                                <li><a href="../aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
+                                <li><a href="../ece.html"><span>Electronics & Communication Engineering</span></a></li>
+                                <li><a href="../mech.html"><span>Mechanical Engineering</span></a></li>
                             </ul>
                         </li>
                         <li><a href="#people">Testimonials</a></li>
@@ -80,7 +80,7 @@
 
         <section class="image-body">
             <div class="image-overlay"></div>
-            <h2>DEPARTMENT OF COMPUTER SCIENCE</h2>
+            <h2>DEPARTMENT OF INFORMATION SCIENCE</h2>
         </section>
         <section class="dept-about">
             <div class="dept-container " id="cancon">
@@ -289,6 +289,27 @@
                         </div>
                     </div>
                 </div>
+                <section class="navigation">
+                    <h3 class="department-heading">More About Department >>></h3>
+                    <div class="nav-container">
+                        <div class="nav box1">
+                            <div class="nav-overlay"></div>
+                            <a href="../is.html">IS</a>
+                        </div>
+                        <div class="nav box2">
+                            <div class="nav-overlay"></div>
+                            <a href="../is/faculties.html">Faculty</a>
+                        </div>
+                        <div class="nav box3">
+                            <div class="nav-overlay"></div>
+                            <a href="../is/hod.html">HOD</a>
+                        </div>
+                        <div class="nav box4">
+                            <div class="nav-overlay"></div>
+                            <a href="../is/structure.html">PEO</a>
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
 
