--- a/dept/is/hod.html
+++ b/dept/is/hod.html
@@ -58,13 +58,13 @@
                             <a href="#">Department</a>
                             <i class="fa-solid fa-chevron-down down"></i>
                             <ul class="sub-menu">
-                                <li><a href="#"><span>Computer Science & Engineering</span></a></li>
-                                <li><a href="is.html"><span>Information Science & Engineering</span></a></li>
-                                <li><a href="csd.html"><span>Computer Science & Design</span></a></li>
-                                <li><a href="csbs.html"><span>Computer Science & Business System</span></a></li>
-                                <li><a href="aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
-                                <li><a href="ece.html"><span>Electronics & Communication Engineering</span></a></li>
-                                <li><a href="mech.html"><span>Mechanical Engineering</span></a></li>
+                                <li><a href="../cs.html"><span>Computer Science & Engineering</span></a></li>
+                                <li><a href="../is.html"><span>Information Science & Engineering</span></a></li>
+                                <li><a href="../csd.html"><span>Computer Science & Design</span></a></li>
+                                <li><a href="../csbs.html"><span>Computer Science & Business System</span></a></li>
+                                <li><a href="../aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
+                                <li><a href="../ece.html"><span>Electronics & Communication Engineering</span></a></li>
+                                <li><a href="../mech.html"><span>Mechanical Engineering</span></a></li>
                             </ul>
                         </li>
                         <li><a href="#people">Testimonials</a></li>
@@ -80,52 +80,67 @@
 
         <section class="image-body">
             <div class="image-overlay"></div>
-            <h2>DEPARTMENT OF COMPUTER SCIENCE</h2>
+            <h2>DEPARTMENT OF INFORMATION SCIENCE</h2>
         </section>
         <section class="dept-about">
             <div class="dept-container " id="cancon">
                 <div class="row">
-                    <div role="" class="tab-pane fade in" id="vtab3">
+                    <div role="tabpanel" class="tab-pane fade in" id="vtab3">
                         <div class="animatedParent animateOnce">
                             <div class="animated fadeInRight">
-
+                                <h3 id="head1" class="inner_heading">FROM THE DESK OF DEPARTMENT HEAD</h3>
                                 <img id="hodimg"
-                                    src="https://www.canaraengineering.in/departments/faculty/0120160001.jpg"
-                                    class="img-responsive pull-left img-thumbnail" alt="Image" width="auto"
-                                    style="border-style:none;    margin: 0 15px 5px 0;">
-                                <p id="firstline" style="font-weight:500;color:#000040;"><b>"Greetings from the
-                                        department of Computer Science and Engineering (CS&E)"</b></p>
-                                <p style="font-weight:500;color:#000040;"> It gives me pride and pleasure to
-                                    introduce the department and its Web pages. I hope you will browse our OBE
-                                    (Outcome Based Education) driven teaching-learning process, student
-                                    achievements and activities. Our primary goal is to provide quality
-                                    technical education in Computer Science and Engineering enriched with
-                                    values. The process of learning is extremely important in life and it plays
-                                    a crucial role in developing one's intellectual capability, besides career.
-                                    We follow outcome based teaching-learning process that bridges the theory -
-                                    practice gap while remaining grounded in the core of computer science and
-                                    engineering. Nowadays the technology is changing rapidly, especially in the
-                                    field of computing. To face this challenge, we equip our students for
-                                    problem-solving and expose them to the state-of-the-art in computer science
-                                    and information technology. We also work hard to help students to improve
-                                    their verbal and written communication abilities, analytical thinking, and
-                                    soft skills so that they may flourish in the corporate world. We believe
-                                    that, our students who are clear and thorough in computer fundamentals
-                                    coupled with practical experience can adapt to rapid changes in technology
-                                    or software industry easily. The department has produced hundreds of
-                                    competent professionals and has established a name for itself in the region.
-                                    Thanks to the efforts of our Management, affiliating University (VTU),
-                                    faculty, alumni, parents and the students.</p>
+                                    src="https://www.canaraengineering.in/departments/faculty/0120180003.jpg"
+                                    class="img-responsive center-block">
                                 <div>
+                                    <p style="font-weight: 500;" align="justify">
+                                        The <b>Department of Information Science & Engineering (ISE)</b> is
+                                        committed to ensuring successful careers for its students. For us, this
+                                        entails cultivating industry interactions, establishing a research
+                                        culture from day one, and ensuring seamless education using the
+                                        cutting-edge technology available. The excellent infrastructure,
+                                        teaching faculty of the best kind in the department ensuring quality
+                                        education such as interaction among students, parents and staff, along
+                                        with a Training and Placement Cell ensuring a bright future to students.
+                                        We strongly encourage innovation in research, teaching and in service to
+                                        the profession, the local community and industry to be innovative. Our
+                                        faculty and students are constantly striving to improve and to advance
+                                        the state of the art in Information Science and Engineering. I invite
+                                        you to be part of our efforts as we propel the department of Information
+                                        Science & Engineering to ever-greater heights. Finally, I wish all the
+                                        students and faculty a good academic career.
+                                    </p>
+                                    <p style="font-weight: 500;" class="text-right"><b>
 
-                                    <p class="text-right" style="font-weight:500;color:#000040;"> <b>Dr. Sunil
-                                            Kumar B L</b></p>
-
+                                            Dr. Jagadisha N<br />
+                                            Associate Professor. & HOD
+                                        </b></p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <section class="navigation">
+                    <h3 class="department-heading">More About Department >>></h3>
+                    <div class="nav-container">
+                        <div class="nav box1">
+                            <div class="nav-overlay"></div>
+                            <a href="../is.html">IS</a>
+                        </div>
+                        <div class="nav box2">
+                            <div class="nav-overlay"></div>
+                            <a href="../is/faculties.html">Faculty</a>
+                        </div>
+                        <div class="nav box3">
+                            <div class="nav-overlay"></div>
+                            <a href="../is/facilities.html">Facilities</a>
+                        </div>
+                        <div class="nav box4">
+                            <div class="nav-overlay"></div>
+                            <a href="../is/structure.html">PEO</a>
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
 
