--- a/dept/is/structure.html
+++ b/dept/is/structure.html
@@ -58,13 +58,13 @@
                             <a href="#">Department</a>
                             <i class="fa-solid fa-chevron-down down"></i>
                             <ul class="sub-menu">
-                                <li><a href="#"><span>Computer Science & Engineering</span></a></li>
-                                <li><a href="is.html"><span>Information Science & Engineering</span></a></li>
-                                <li><a href="csd.html"><span>Computer Science & Design</span></a></li>
-                                <li><a href="csbs.html"><span>Computer Science & Business System</span></a></li>
-                                <li><a href="aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
-                                <li><a href="ece.html"><span>Electronics & Communication Engineering</span></a></li>
-                                <li><a href="mech.html"><span>Mechanical Engineering</span></a></li>
+                                <li><a href="../cs.html"><span>Computer Science & Engineering</span></a></li>
+                                <li><a href="../is.html"><span>Information Science & Engineering</span></a></li>
+                                <li><a href="../csd.html"><span>Computer Science & Design</span></a></li>
+                                <li><a href="../csbs.html"><span>Computer Science & Business System</span></a></li>
+                                <li><a href="../aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
+                                <li><a href="../ece.html"><span>Electronics & Communication Engineering</span></a></li>
+                                <li><a href="../mech.html"><span>Mechanical Engineering</span></a></li>
                             </ul>
                         </li>
                         <li><a href="#people">Testimonials</a></li>
@@ -80,158 +80,121 @@
 
         <section class="image-body">
             <div class="image-overlay"></div>
-            <h2>DEPARTMENT OF COMPUTER SCIENCE</h2>
+            <h2>DEPARTMENT OF INFORMATION SCIENCE</h2>
         </section>
         <section class="dept-about">
             <div class="dept-container " id="cancon">
                 <div class="row">
-                    <div role="" class="tab-pane fade in" id="vtab2">
+                    <div role="tabpanel" class="tab-pane fade in" id="vtab6">
                         <div class="animatedParent animateOnce">
                             <div class="animated fadeInRight">
-
-                                <img src="https://www.canaraengineering.in/assets/images/cs_org.jpg"
-                                    class="img-responsive center-block" alt="CS Organisation Structure">
-
-
-
-                                <h4 style="font-weight:500;color:#000040;">DAC: Departmental Advisory Committee
-                                </h4>
-                                <table class="table-striped table table-bordered"
-                                    style="font-weight:500;color:#000040;">
-                                    <thead>
-                                        <th colspan="2" style="text-align:center;"><b>Composition</b></th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Head of the Department</td>
-                                            <td>Chairman</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Expert from Academia</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Expert from Industry</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Project Coordinator</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Seminar Coordinator</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Four Senior Faculty Members</td>
-                                            <td>Member</td>
-                                        </tr>
-
-                                        <tr>
-                                            <td>Programme Coordinator</td>
-                                            <td>Member Secretary</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-
-
-
-                                <h4 style="font-weight:500;color:#000040;">DQAC: Departmental Quality Assurance
-                                    Committe</h4>
-                                <table class="table-striped table table-bordered"
-                                    style="font-weight:500;color:#000040;">
-                                    <thead>
-                                        <th colspan="2" style="text-align:center;"><b>Composition</b></th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Head of the Department</td>
-                                            <td>Chairman</td>
-                                        </tr>
-                                        <tr>
-                                            <td>SIX Senior Faculty Members</td>
-                                            <td>Members</td>
-                                        </tr>
-
-                                        <tr>
-                                            <td>Programme Coordinator</td>
-                                            <td>Member Secretary</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-
-
-                                <h4 style="font-weight:500;color:#000040;">Departmental Budget/Purchase
-                                    Committee</h4>
-                                <table class="table-striped table table-bordered"
-                                    style="font-weight:500;color:#000040;">
-                                    <thead>
-                                        <th colspan="2" style="text-align:center;"><b>Composition</b></th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Head of the Department</td>
-                                            <td>Chairman</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Programme Coordinator</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Professional Society Coordinator</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Facility Coordinator</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Budget / Purchase Coordinator</td>
-                                            <td>Member Secretary</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <h4 style="font-weight:500;color:#000040;">Departmental Project Assessment
-                                    Committee (DPAC)</h4>
-                                <table class="table-striped table table-bordered"
-                                    style="font-weight:500;color:#000040;">
-                                    <thead>
-                                        <th colspan="2" style="text-align:center;"><b>Composition</b></th>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Head of the Department</td>
-                                            <td>Chairman</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Programme Coordinator</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Seminar Coordinator</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Research Coordinator</td>
-                                            <td>Member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Project Coordinatorr</td>
-                                            <td>Member Secretary</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-
-                                <h5 style="font-weight:500;color:#000040;">CSI: Computer Society of India</h5>
-
-                                <h5 style="font-weight:500;color:#000040;">BITES: Board for IT Education
-                                    Standards</h5>
-
-                                <h5 style="font-weight:500;color:#000040;">NSS: National Service Scheme</h5>
+                                <h4 id="innerhead1"><b>PROGRAM EDUCATIONAL OBJECTIVES</b></h4>
+                                <ol>
+                                    <li style="font-weight: 500;color:#000040">Graduates will succeed in the
+                                        field of Information Science and Engineering, professional career and
+                                        higher studies.</li>
+                                    <li style="font-weight: 500;color:#000040">Graduates will analyze the
+                                        requirements of the software industries and provide novel engineering
+                                        designs and efficient solutions with legal and ethical responsibility.
+                                    </li>
+                                    <li style="font-weight: 500;color:#000040">Graduates will adapt to emerging
+                                        technologies, work in multidisciplinary teams with effective
+                                        communication skills and leadership qualities.</li>
+                                </ol>
+                                <br>
+                                <h4 id="innerhead1"><b>PROGRAM OUTCOMES</b></h4>
+                                <p style="font-weight: 500;color:#000040;">Engineering graduates in
+                                    <b>Information Science and Engineering</b>will be able to:
+                                </p>
+                                <ol>
+                                    <li style="font-weight: 500;color:#000040"><b>Engineering knowledge:</b>
+                                        Apply the knowledge of mathematics, science, engineering fundamentals,
+                                        and an engineering specialization to the solution of complex engineering
+                                        problems.</li>
+                                    <li style="font-weight: 500;color:#000040"><b>Problem analysis:</b>
+                                        Identify, formulate, review research literature, and analyze complex
+                                        engineering problems reaching substantiated conclusions using first
+                                        principles of mathematics, natural sciences, and engineering sciences.
+                                    </li>
+                                    <li style="font-weight: 500;color:#000040"><b>Design/development of
+                                            solutions:</b> Design solutions for complex engineering problems and
+                                        design system components or processes that meet the specified needs with
+                                        appropriate consideration for the public health and safety, and the
+                                        cultural, societal, and environmental considerations.</li>
+                                    <li style="font-weight: 500;color:#000040"><b>Conduct investigations of
+                                            complex problems:</b> Use research-based knowledge and research
+                                        methods including design of experiments, analysis and interpretation of
+                                        data, and synthesis of the information to provide valid conclusions.
+                                    </li>
+                                    <li style="font-weight: 500;color:#000040"><b>Modern tool usage:</b> Create,
+                                        select, and apply appropriate techniques, resources, and modern
+                                        engineering and IT tools including prediction and modeling to complex
+                                        engineering activities with an understanding of the limitations.</li>
+                                    <li style="font-weight: 500;color:#000040"><b>The engineer and society:</b>
+                                        Apply reasoning informed by the contextual knowledge to assess societal,
+                                        health, safety, legal and cultural issues and the consequent
+                                        responsibilities relevant to the professional engineering practice.</li>
+                                    <li style="font-weight: 500;color:#000040"><b>Environment and
+                                            Sustainability:</b> Understand the impact of the professional
+                                        engineering solutions in societal and environmental contexts, and
+                                        demonstrate the knowledge of, and need for sustainable development.</li>
+                                    <li style="font-weight: 500;color:#000040"><b>Ethics:</b> Apply ethical
+                                        principles and commit to professional ethics and responsibilities and
+                                        norms of the engineering practice.</li>
+                                    <li style="font-weight: 500;color:#000040"><b>Individual and team work:</b>
+                                        Function effectively as an individual, and as a member or leader in
+                                        diverse teams, and in multidisciplinary settings.</li>
+                                    <li style="font-weight: 500;color:#000040"><b>Communication:</b>
+                                        CCommunicate effectively on complex engineering activities with the
+                                        engineering community and with society at large, such as, being able to
+                                        comprehend and write effective reports and design documentation, make
+                                        effective presentations, and give and receive clear instructions.</li>
+                                    <li style="font-weight: 500;color:#000040"><b>Project management and
+                                            finance:</b> Demonstrate knowledge and understanding of the
+                                        engineering and management principles and apply these to one’s own work,
+                                        as a member and leader in a team, to manage projects and in
+                                        multidisciplinary environments.</li>
+                                    <li style="font-weight: 500;color:#000040"><b>Life-long learning:</b>
+                                        Recognize the need for, and have the preparation and ability to engage
+                                        in independent and life-long learning in the broadest context of
+                                        technological change.</li>
+                                </ol>
+                                </br>
+                                <h4 id="innerhead1"><b>PROGRAM SPECIFIC OUTCOMES</b></h4>
+                                <ol>
+                                    <li style="font-weight: 500;color:#000040">An ability to understand, analyze
+                                        and impart the basic knowledge of Information Science and Engineering.
+                                    </li>
+                                    <li style="font-weight: 500;color:#000040">An ability to apply the
+                                        programming, designing, and problem solving techniques in
+                                        building/simulating the applications, solving the problems and guiding
+                                        the innovative career paths to become an IT Engineer.</li>
+                                </ol>
                             </div>
                         </div>
                     </div>
                 </div>
+                <section class="navigation">
+                    <h3 class="department-heading">More About Department >>></h3>
+                    <div class="nav-container">
+                        <div class="nav box1">
+                            <div class="nav-overlay"></div>
+                            <a href="../is.html">IS</a>
+                        </div>
+                        <div class="nav box2">
+                            <div class="nav-overlay"></div>
+                            <a href="../is/faculties.html">Faculty</a>
+                        </div>
+                        <div class="nav box3">
+                            <div class="nav-overlay"></div>
+                            <a href="../is/hod.html">HOD</a>
+                        </div>
+                        <div class="nav box4">
+                            <div class="nav-overlay"></div>
+                            <a href="../is/facilities.html">Facilities</a>
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
 
