--- a/dept/mech/hod.html
+++ b/dept/mech/hod.html
@@ -58,13 +58,13 @@
                             <a href="#">Department</a>
                             <i class="fa-solid fa-chevron-down down"></i>
                             <ul class="sub-menu">
-                                <li><a href="#"><span>Computer Science & Engineering</span></a></li>
-                                <li><a href="is.html"><span>Information Science & Engineering</span></a></li>
-                                <li><a href="csd.html"><span>Computer Science & Design</span></a></li>
-                                <li><a href="csbs.html"><span>Computer Science & Business System</span></a></li>
-                                <li><a href="aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
-                                <li><a href="ece.html"><span>Electronics & Communication Engineering</span></a></li>
-                                <li><a href="mech.html"><span>Mechanical Engineering</span></a></li>
+                                <li><a href="../cs.html"><span>Computer Science & Engineering</span></a></li>
+                                <li><a href="../is.html"><span>Information Science & Engineering</span></a></li>
+                                <li><a href="../csd.html"><span>Computer Science & Design</span></a></li>
+                                <li><a href="../csbs.html"><span>Computer Science & Business System</span></a></li>
+                                <li><a href="../aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
+                                <li><a href="../ece.html"><span>Electronics & Communication Engineering</span></a></li>
+                                <li><a href="../mech.html"><span>Mechanical Engineering</span></a></li>
                             </ul>
                         </li>
                         <li><a href="#people">Testimonials</a></li>
@@ -80,52 +80,75 @@
 
         <section class="image-body">
             <div class="image-overlay"></div>
-            <h2>DEPARTMENT OF COMPUTER SCIENCE</h2>
+            <h2>DEPARTMENT OF MECHANICAL ENGINEERING</h2>
         </section>
         <section class="dept-about">
             <div class="dept-container " id="cancon">
                 <div class="row">
-                    <div role="" class="tab-pane fade in" id="vtab3">
+                    <div role="tabpanel" class="tab-pane fade in" id="vtab3">
                         <div class="animatedParent animateOnce">
                             <div class="animated fadeInRight">
-
+                                <h3 id="head1" class="inner_heading">FROM THE DESK OF DEPARTMENT HEAD</h3>
                                 <img id="hodimg"
-                                    src="https://www.canaraengineering.in/departments/faculty/0120160001.jpg"
-                                    class="img-responsive pull-left img-thumbnail" alt="Image" width="auto"
-                                    style="border-style:none;    margin: 0 15px 5px 0;">
-                                <p id="firstline" style="font-weight:500;color:#000040;"><b>"Greetings from the
-                                        department of Computer Science and Engineering (CS&E)"</b></p>
-                                <p style="font-weight:500;color:#000040;"> It gives me pride and pleasure to
-                                    introduce the department and its Web pages. I hope you will browse our OBE
-                                    (Outcome Based Education) driven teaching-learning process, student
-                                    achievements and activities. Our primary goal is to provide quality
-                                    technical education in Computer Science and Engineering enriched with
-                                    values. The process of learning is extremely important in life and it plays
-                                    a crucial role in developing one's intellectual capability, besides career.
-                                    We follow outcome based teaching-learning process that bridges the theory -
-                                    practice gap while remaining grounded in the core of computer science and
-                                    engineering. Nowadays the technology is changing rapidly, especially in the
-                                    field of computing. To face this challenge, we equip our students for
-                                    problem-solving and expose them to the state-of-the-art in computer science
-                                    and information technology. We also work hard to help students to improve
-                                    their verbal and written communication abilities, analytical thinking, and
-                                    soft skills so that they may flourish in the corporate world. We believe
-                                    that, our students who are clear and thorough in computer fundamentals
-                                    coupled with practical experience can adapt to rapid changes in technology
-                                    or software industry easily. The department has produced hundreds of
-                                    competent professionals and has established a name for itself in the region.
-                                    Thanks to the efforts of our Management, affiliating University (VTU),
-                                    faculty, alumni, parents and the students.</p>
+                                    src="https://www.canaraengineering.in/departments/faculty/0120120008.jpg"
+                                    class="img-responsive center-block">
+                                <p style="font-weight: 500;">Mechanical Engineering Department is one of the
+                                    most active and most happening
+                                    Departments in CEC. It is one of the very few departments around Mangalore
+                                    that
+                                    has the Industrial CNC Machining centres. A team of 02 Professors, and 15
+                                    Assistant Professors are working with passion and dedication to ensure
+                                    career
+                                    oriented Total Quality Education. To meet such a feat the Department has
+                                    introduced additional labs on Advanced Material testing, CNC
+                                    operation, Dissection lab, Bio diesel Processing lab, Computer Aided
+                                    Modelling Lab (On AutoCAD, SolidWorks and Creo Software) with an objective
+                                    to provide the practical exposure to students. The Department organizes many
+                                    Workshops, Webinars and Faculty Development Programmes in variety of domains
+                                    for the benefit of Students and Faculty. The Department has MoU with MNCs
+                                    who
+                                    visit the department to impart career-oriented training. We are totally
+                                    focussed on
+                                    Outcome based education (OBE) via Industrial Internships and Product
+                                    development centres. Exclusive work is being carried out on Electric
+                                    vehicles in
+                                    association of Electrical Department. A research work with a DST funding of
+                                    30
+                                    Lakhs is under progress in the field of Plastic recycling. These are new
+                                    fields where
+                                    the Department is working to make students Industry ready</p>
                                 <div>
 
-                                    <p class="text-right" style="font-weight:500;color:#000040;"> <b>Dr. Sunil
-                                            Kumar B L</b></p>
-
+                                    <p class="text-right"> <b>Dr. N. Venkatesh</b></p>
+                                    <p class="text-right"> BE, MS, MBA, PhD</p>
+                                    <p class="text-right" style="font-weight: 500;">H.O.D MECHANICAL DEPARTMENT
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <section class="navigation">
+                    <h3 class="department-heading">More About Department >>></h3>
+                    <div class="nav-container">
+                        <div class="nav box1">
+                            <div class="nav-overlay"></div>
+                            <a href="../mech.html">MECH</a>
+                        </div>
+                        <div class="nav box2">
+                            <div class="nav-overlay"></div>
+                            <a href="../mech/faculties.html">Faculty</a>
+                        </div>
+                        <div class="nav box3">
+                            <div class="nav-overlay"></div>
+                            <a href="../mech/facilities.html">Facilities</a>
+                        </div>
+                        <div class="nav box4">
+                            <div class="nav-overlay"></div>
+                            <a href="../mech/structure.html">PEO</a>
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
 
