--- a/dept/cs/hod.html
+++ b/dept/cs/hod.html
@@ -58,13 +58,13 @@
                             <a href="#">Department</a>
                             <i class="fa-solid fa-chevron-down down"></i>
                             <ul class="sub-menu">
-                                <li><a href="#"><span>Computer Science & Engineering</span></a></li>
-                                <li><a href="is.html"><span>Information Science & Engineering</span></a></li>
-                                <li><a href="csd.html"><span>Computer Science & Design</span></a></li>
-                                <li><a href="csbs.html"><span>Computer Science & Business System</span></a></li>
-                                <li><a href="aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
-                                <li><a href="ece.html"><span>Electronics & Communication Engineering</span></a></li>
-                                <li><a href="mech.html"><span>Mechanical Engineering</span></a></li>
+                                <li><a href="../cs.html"><span>Computer Science & Engineering</span></a></li>
+                                <li><a href="../is.html"><span>Information Science & Engineering</span></a></li>
+                                <li><a href="../csd.html"><span>Computer Science & Design</span></a></li>
+                                <li><a href="../csbs.html"><span>Computer Science & Business System</span></a></li>
+                                <li><a href="../aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
+                                <li><a href="../ece.html"><span>Electronics & Communication Engineering</span></a></li>
+                                <li><a href="../mech.html"><span>Mechanical Engineering</span></a></li>
                             </ul>
                         </li>
                         <li><a href="#people">Testimonials</a></li>
