--- a/dept/csd.html
+++ b/dept/csd.html
@@ -58,9 +58,9 @@
                             <a href="#">Department</a>
                             <i class="fa-solid fa-chevron-down down"></i>
                             <ul class="sub-menu">
-                                <li><a href="#"><span>Computer Science & Engineering</span></a></li>
+                                <li><a href="cs.html"><span>Computer Science & Engineering</span></a></li>
                                 <li><a href="is.html"><span>Information Science & Engineering</span></a></li>
-                                <li><a href="csd.html"><span>Computer Science & Design</span></a></li>
+                                <li><a href="#"><span>Computer Science & Design</span></a></li>
                                 <li><a href="csbs.html"><span>Computer Science & Business System</span></a></li>
                                 <li><a href="aiml.html"><span>Artificial Intelligence & Machine Learning</span></a></li>
                                 <li><a href="ece.html"><span>Electronics & Communication Engineering</span></a></li>
